# interpoli

./: .typos.toml  AUTHORS  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
src/: animated.rs  composition.rs  fixed.rs  lib.rs  render.rs  spline.rs  timeline.rs  value.rs
