[package]
name = "interpoli"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
description = ""
keywords = ["graphics", "animation"]
categories = ["graphics"]
repository = "https://github.com/linebender/interpoli"
readme = "README.md"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.75"

[features]
default = ["std"]
std = ["kurbo/std", "peniko/std"]
libm = ["kurbo/libm", "peniko/libm"]
mint = ["keyframe/mint_types", "kurbo/mint"]
vello = ["dep:vello"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
# Interpoli is entirely platform-agnostic, so only display docs for one platform
targets = []

[dependencies]
hashbrown = "0.14.5"
anymap = { version = "0.12.1", default-features = false }
keyframe = { version = "1.1.1", default-features = false }
kurbo = { version = "0.11", default-features = false }
peniko = { version = "0.1.1", default-features = false }
vello = { version = "0.2.0", default-features = false, optional = true }

[lints]
rust.unsafe_code = "forbid"

rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.let_underscore_drop = "warn"
rust.missing_debug_implementations = "warn"
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"
rust.variant_size_differences = "warn"

clippy.allow_attributes_without_reason = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "forbid"
clippy.infinite_loop = "warn"
clippy.large_include_file = "warn"
clippy.large_stack_arrays = "warn"
clippy.match_same_arms = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_errors_doc = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.missing_panics_doc = "warn"
clippy.partial_pub_fields = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.shadow_unrelated = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.wildcard_imports = "warn"

# TODO: Enable these and move them back above.
# clippy.return_self_not_must_use = "warn"
# clippy.use_self = "warn"
# rust.elided_lifetimes_in_paths = "warn"
# rust.missing_docs = "warn"
# rust.single_use_lifetimes = "warn"
